z-index issue

--- a/public/styl/about.styl
+++ b/public/styl/about.styl
@@ -10,7 +10,7 @@
 	top 50%
 	width 100px
 	height 50px
-	// z-index 101
+	z-index 100
 	background transparent
 
 .next-slide.right
